examples/ingress/ingress-svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: debug
  namespace: default
spec:
  rules:
    ### DNS must set before
    #
    ### to test without DNS use:
    ### curl --header 'Host: my.test.com' 'http://ELB/the_url_to_test'
    #
  - host: my.test.com
    http:
      paths:
      - backend:
          serviceName: http-svc
          servicePort: http
        path: /
