examples/ingress/web-2-ingress-rule.yaml
## Ingress for second service
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress-rule
  namespace: default
spec:
  rules:
    ### DNS must set before
    #
    ### to test without DNS use:
    ### curl --header 'Host: my.web-2.com' 'http://ELB/the_url_to_test'
    #
    - host: my.web-2.com
      http:
        paths:
          - backend:
              serviceName: web-2
              servicePort: http
            path: /
